update tutorial link

--- a/tutorial/tutorial_route_planner.ipynb
+++ b/tutorial/tutorial_route_planner.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## 0. Preparation\n",
     "* you have gone through the tutorial for **CommonRoad Input-Output**\n",
-    "* you have installed the pacakge (see `README.md`)\n",
+    "* you have installed the [route planner](https://gitlab.lrz.de/tum-cps/commonroad-route-planner) package\n",
     "\n",
     "Let's start with importing relevant modules and classes."
    ]
