--- a/tutorial/tutorial_route_planner.ipynb
+++ b/tutorial/tutorial_route_planner.ipynb
@@ -40,7 +40,8 @@
     "import matplotlib.pyplot as plt\n",
     "from commonroad.common.file_reader import CommonRoadFileReader\n",
     "from commonroad_route_planner.route_planner import RoutePlanner\n",
-    "from commonroad_route_planner.utility.visualization import visualize_route"
+    "from commonroad_route_planner.utility.visualization import visualize_route\n",
+    "from commonroad.visualization.mp_renderer import MPRenderer"
    ]
   },
   {
